tests/semantic_cases/valid/eof_if_condition.ob0
MODULE Main;
BEGIN
  IF EOF() THEN
    WriteLn()
  END
END Main.
